--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@tabler/icons-react": "^2.40.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/edge-config": "^0.4.1",
+    "@vercel/otel": "^1.13.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@xenova/transformers": "^2.13.4",
     "ai": "^5.0.0-canary.24",
     "class-variance-authority": "^0.7.0",
@@ -74,7 +76,7 @@
     "gpt-tokenizer": "^2.1.2",
     "i18next": "^23.7.16",
     "i18next-resources-to-backend": "^1.2.0",
-    "langchain": "^0.3.28",
+    "langchain": "^0.0.168",
     "lucide-react": "^0.292.0",
     "mammoth": "^1.6.0",
     "next": "^14.1.0",
@@ -89,8 +91,9 @@
     "react-hook-form": "^7.48.2",
     "react-i18next": "^14.0.0",
     "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^5.8.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.3",
+    "recharts": "^2.15.4",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "sonner": "^1.3.1",
@@ -110,6 +113,7 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
+    "babel-loader": "^10.0.0",
     "clsx": "^2.0.0",
     "eslint": "^8",
     "eslint-config-next": "^14.0.2",
