--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@builder.io/sdk": "^6.1.1",
     "@builder.io/sdk-react": "^4.2.2",
     "@supabase/supabase-js": "^2.39.3",
+    "@upstash/search": "^0.1.2",
     "@vercel/analytics": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
