--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Build + Runtime
+node_modules/
+.next/
+.vercel/
+dist/
+.cache/
+
+# Secrets + Env
 .env
-.vercel
-.env*.local
+.env.local
+
+# Editor & OS
+.DS_Store
+.vscode/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
