--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^7.0.2"
+    "vite": "^7.0.2",
+    "vite-plugin-html": "^3.2.2"
   }
 }
