--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "@upstash/search": "^0.1.2",
     "@vercel/analytics": "^1.5.0",
+    "next": "^15.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
