"⚙️ Handle Slack Event Challenge — Enables event subscriptions for SAINTSAL™"

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@vercel/node": "^2.3.0",
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^7.0.2",
     "vite-plugin-html": "^3.2.2"
